--- a/source/12/index.html
+++ b/source/12/index.html
@@ -22,11 +22,11 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/manifest.json">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="manifest.json">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
 
 </head>
@@ -113,8 +113,8 @@ $jetztzeit = time();
 	<div class="container">
     	<div class="row">
         	<div class="col-sm-8">
-            	<h1>Ihr Hotel inmitten herrlicher Natur!</h1>
-                <p class="lead">Wir begrüßen Sie im MORADA HOTEL ALEXISBAD, dem sympathischen Hotel im sagenumwobenen Harz. Wir befinden uns im wildromantischen Selketal, eines der schönsten Regionen des Mittelgebirges. Von hier aus sind viele Sehenswürdigkeiten, wie der Hexentanzplatz in Thale oder die Altstadt von Quedlinburg, schnell erreicht. Machen Sie eine Wanderung durch die einzigartige Natur und genießen Sie die gute Aussicht von den Bergen auf die Täler.</p>
+            	<h1>Ihr Hotel im Allgäu</h1>
+                <p class="lead">Genießen Sie bei uns eine Atmosphäre bayerischer Gastlichkeit in der viel Holz, spitze Giebel, Balustraden, Rundbögen und Kronleuchter das Bild bestimmen. Unsere komfortablen Hotelzimmer bieten viele Annehmlichkeiten. Bereits am frühen Morgen begrüßen wir Sie mit einem Lächeln bei unserem Frühstücksbuffet im gemütlichen Restaurant. Im Stüble können Sie süddeutsche Lebensfreude bei einem kleinen Umtrunk in geselliger Runde am Abend erleben. Für Ihre Gesundheit empfehlen wir Ihnen unser Kneipp-Tretbecken und die Sauna.</p>
             </div>
         </div>
     </div>
