--- a/source/11/index.html
+++ b/source/11/index.html
@@ -113,8 +113,8 @@ $jetztzeit = time();
 	<div class="container">
     	<div class="row">
         	<div class="col-sm-8">
-            	<h1>Ihr Hotel im Allgäu</h1>
-                <p class="lead">Genießen Sie bei uns eine Atmosphäre bayerischer Gastlichkeit in der viel Holz, spitze Giebel, Balustraden, Rundbögen und Kronleuchter das Bild bestimmen. Unsere komfortablen Hotelzimmer bieten viele Annehmlichkeiten. Bereits am frühen Morgen begrüßen wir Sie mit einem Lächeln bei unserem Frühstücksbuffet im gemütlichen Restaurant. Im Stüble können Sie süddeutsche Lebensfreude bei einem kleinen Umtrunk in geselliger Runde am Abend erleben. Für Ihre Gesundheit empfehlen wir Ihnen unser Kneipp-Tretbecken und die Sauna.</p>
+            	<h1>Herzlich willkommen in Kühlungsborn!</h1>
+                <p class="lead">Wir begrüßen Sie auf den im MORADA HOTEL ARENDSEE, dem familiären Hotel in Kühlungsborn an der Ostsee. Genießen Sie einen Urlaub fernab vom Trubel des Alltags. Der herrliche Sandstrand ist nur einen Katzensprung von unserem Haus entfernt. Schlendern Sie die Flaniermeile Ostseeallee entlang und lassen Sie sich vom Charme der vielen kleinen Cafés und Lädchen verzaubern.</p>
             </div>
         </div>
     </div>
