added img source
img-cprghts now in footer

--- a/source/11/index.html
+++ b/source/11/index.html
@@ -125,7 +125,7 @@ $jetztzeit = time();
 	<div class="container">
     	<div class="row">
         	<div class="col-xs-12 text-center">
-            	<p><small>&copy; <?php echo date("Y"); ?> MORADA Hotels &amp; Resorts</small></p>
+            	<p><small>&copy; <?php echo date("Y"); ?> MORADA Hotels &amp; Resorts // Bildnachweise: Tourismus, Freizeit &amp; Kultur GmbH Kühlungsborn</small></p>
             </div>
         </div>
     </div>
